# fluxtty

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  cleanup-merged-branches.yml  codeql.yml  dependabot-auto-merge.yml  pages.yml  release.yml
docs/: index.html
src/: app.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  ipc.rs  lib.rs  main.rs  pty.rs  session.rs
src/ai/: ai-handler.ts  llm-client.ts  plan-executor.ts
src/config/: ConfigContext.ts
src/input/: AgentDetector.ts  InputBar.ts  ModeManager.ts  PaneSelector.ts
src/keybindings/: KeybindingManager.ts
src/session/: AutoNamer.ts  SessionManager.ts  types.ts
src/settings/: SettingsPanel.ts
src/sidebar/: SessionSidebar.ts
src/waterfall/: TerminalPane.ts  WaterfallArea.ts
