[package]
name = "fluxtty"
version = "0.1.0"
description = "Multi-session developer workspace terminal"
authors = ["fluxtty"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fluxtty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.9"
notify = "6"
strip-ansi-escapes = "0.2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
